# PatientsMedicalAppointmentsSystemUI

./: AppointmentScheduler.qml  AppointmentTypeCard.qml  AppointmentsListDelegate.qml  AppointmentsListHeader.qml  AppointmentsListHeaderItem.qml  AppointmentsModelItem.qml  BookAppointmentDialog.qml  CMakeLists.txt  ComponentRefresherHeading.qml  Dashboard.qml  DatePicker.qml  DoctorPicker.qml  LoginAndBookAppointment.qml  LoginDialog.qml  MonthDate.qml  MonthHeading.qml  PatientAccount.qml  PaymentMethodPicker.qml  RegistrationDialog.qml  Services.qml  TextButton.qml  Theme.qml  TimePicker.qml  TimeSlot.qml  applicationstatemanager.cpp  applicationstatemanager.h  appointmentsmodel.cpp  appointmentsmodel.h  assets.qrc  authentication.cpp  authentication.h  dialogsmanager.cpp  dialogsmanager.h  doctormodel.cpp  doctormodel.h  main.cpp  main.qml  networkmanager.cpp  networkmanager.h  notificationmanager.cpp  (+7 more)
